# trajectory_provisory

./: .gitignore  calibration_images.py  pyproject.toml  stereo_main.py  stereovision.py  stereovision_calibration.py
Calibration_Files/: CmL.txt  CmR.txt  DcL.txt  DcR.txt  ProjL.txt  ProjR.txt  Q.txt  ROIL.txt  ROIR.txt  RectifL.txt  Rtn.txt  Trnsl.txt  rmapL.txt  rmapR.txt  umapL.txt  umapR.txt
calibration_parameters/: CmL.txt  CmR.txt  DcL.txt  DcR.txt  ProjL.txt  ProjR.txt  Q.txt  ROIL.txt  ROIR.txt  RectifL.txt  Rtn.txt  Trnsl.txt  rmapL.txt  rmapR.txt  umapL.txt  umapR.txt
src/: config.py  main.py
src/attributes/: calibration_description.txt  description.txt  stereo_description.txt  stream_description.txt
src/stereo/: stereo_main.py
src/stream/: capture_stream.py  stream.py
