[tool.poetry]
name = "trajectory-provisory"
version = "0.1.0"
description = ""
authors = ["LeweLotki <stefanczyk42@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.9.0.80"
opencv-contrib-python = "^4.9.0.80"
glob2 = "^0.7"
reindent = "^3.5.1"
pytest-shutil = "^1.7.0"
matplotlib = "^3.8.3"
pathfinding = "^1.0.9"
ypstruct = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
